Make sure to propagate back the result of InstallImplementation and bail if it fails.  Bug 292944, r+sr=jst, a=asa