content/xbl/src/nsXBLService.cpp
@@ -639,7 +639,8 @@ nsXBLService::LoadBindings(nsIContent* aContent, nsIURI* aURL, PRBool aAugmentFl
   newBinding->InstallEventHandlers();
 
   // Set up our properties
-  newBinding->InstallImplementation();
+  rv = newBinding->InstallImplementation();
+  NS_ENSURE_SUCCESS(rv, rv);
 
   // Figure out if we need to execute a constructor.
   *aBinding = newBinding->GetFirstBindingWithConstructor();
